Revise SEO content for clarity and emphasis
Updated SEO content with enhanced descriptions and formatting.

--- a/index.html
+++ b/index.html
@@ -141,11 +141,18 @@
         </div>
 
     </div>
-
+    
     <div class="seo-content">
         <h2>About Unmissable Deals</h2>
-        <p>Welcome to the ultimate destination for smart shoppers in India. We track price drops in real-time across major e-commerce platforms like Amazon India, Flipkart, Myntra, and Ajio.</p>
-        <p>© 2025 Unmissable Deals.</p>
+        <p>
+            Welcome to the ultimate destination for smart shoppers in India. We track price drops in real-time across major e-commerce platforms like 
+            <strong>Amazon India</strong>, <strong>Flipkart</strong>, <strong>Myntra</strong>, and <strong>Ajio</strong>.
+        </p>
+        <p>
+            Our automated engine filters through thousands of products to bring you only the highest discounts on smartphones, fashion, laptops, and home appliances. 
+            Stop overpaying and start saving with our curated list of today's best loot deals.
+        </p>
+        <p>© 2025 Unmissable Deals. All rights reserved.</p>
     </div>
 
     <script>
