Add warning bar for adblock notification
Added a warning bar that triggers an adblock modal.

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         <div class="status-badge">Live</div>
     </div>
 
+    <div id="warning-bar" onclick="document.getElementById('adblock-modal').style.display='block'">
+    </div>
+
     <div class="main-container">
         
         <iframe 
