--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
         /* WARNING BAR (Hidden by default) */
         #warning-bar {
-            display: none; /* Invisible unless triggered by JS */
+            display: none; 
             background: #ffeeba;
             color: #856404;
             text-align: center;
             padding: 10px;
             font-size: 0.9rem;
             cursor: pointer;
-            border-bottom: 1px solid #ffeeba;
+            border-bottom: 1px solid #ffdf7e;
         }
 
         /* MAIN CONTAINER */
@@ -128,6 +128,7 @@
     </div>
 
     <div id="warning-bar" onclick="document.getElementById('adblock-modal').style.display='block'">
+        ⚠️ Not seeing deals? <b>Click here for help.</b>
     </div>
 
     <div class="main-container">
@@ -182,20 +183,19 @@
             var modal = document.getElementById('adblock-modal');
             var warningBar = document.getElementById('warning-bar');
 
-            // Wait 1.5s to see if the browser hides the iframe
+            // Wait 2s to ensure loading is real
             setTimeout(function() {
                 try {
                     // Check if iframe height is crushed (Extension Block)
                     if (iframe.offsetHeight === 0 || window.getComputedStyle(iframe).display === 'none') {
-                        // Logic: Only show warning if BLOCKED
+                        // FIX: Only show Yellow Bar. DO NOT open modal.
                         iframe.style.display = 'none';
-                        warningBar.style.display = 'block'; // Show yellow bar
-                        modal.style.display = 'block';      // Show popup
+                        warningBar.style.display = 'block'; 
                     }
                 } catch (e) {
                     console.log("Check failed");
                 }
-            }, 1500);
+            }, 2000);
         };
     </script>
 
